# EILEV

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  run-mypy
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  test.yaml
data-explorations/: data_exploration.ipynb  eval_data_exploration.ipynb  test_ego4d_fho_main_dataset.ipynb  test_epic_kitchens_dataset.ipynb  video_blip_video_qa.ipynb
demo/: app.py  app_v2.py  eilev.py  eilev_demo.py  video_blip_demo.py
eilev/data/: ego4d.py  epic_kitchens.py  frame.py
eilev/model/: utils.py  v2.py
examples/notebooks/: data_exploration.ipynb  ego4d_eval_data_exploration.ipynb  eval_data_exploration.ipynb  instruct_blip_video_qa.ipynb  test_ego4d_fho_main_dataset.ipynb
figures/: ablation_figures.ipynb  baseline_eval_figures.ipynb  gen_figures.ipynb  held_out_verb_noun.ipynb  held_out_verb_noun_eval_figures.ipynb  icl_eval_figures.ipynb  shuffle_in_context_figures.ipynb  skewed_dist_figures.ipynb  tsne_ego4d_epic_kitchens.ipynb
samples/: eilev_generate_action_narration.py  video_blip_generate_action_narration.py
scripts/ego4d/: add_structured_verb_noun.py  extract_frames.py  generate_narration_texts.py  generate_std_sent.py  icl_eval.py  split_held_out_verb_noun_train_val_test.py  split_train_val.py  split_train_val_test.py  train_v1.py  train_v2.py
scripts/epic-kitchens/: epic_kitchens_extract_frames.py  transform_to_full_sent.py  verify_epic_kitchens.py
scripts/general/: bert_score_eval.py  combine_in_context_examples_generated_narrations.py  generate_narration_texts.py  generation_eval.py  get_vision_model_embs.py  icl_eval.py  sample_in_context_examples.py  select_qualitative_examples.py  train_v1.py  train_v2.py
slurm-scripts/: README.md
slurm-scripts/extract-frames/: submit_ego4d_extract_frames.py  submit_epic_kitchens_extract_frames.py  submit_extract_frames.py
slurm-scripts/icl-eval-ego4d/: generate-narration-texts.sh  (+1 more)
(+25 files in other folders)
